Fixed vertical alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,3 +56,6 @@ footer {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
 }
+img {
+    vertical-align: middle;
+}
